# DraftFut

./: README.md  index.html  ligas.html  monteseutime.html  package-lock.json  package.json  painel.html  pontos.html  pyproject.toml  ranking.html
draftfut/: __init__.py
src/: App.tsx
src/components/: Leaderboard.tsx  SearchBar.tsx  Sidebar.tsx  StatsCards.tsx  YourPerformance.tsx
src/pages/: BuildTeam.tsx  Dashboard.tsx  Leagues.tsx  Points.tsx  Ranking.tsx
tests/: conftest.py  test_draft.py  test_league.py  test_player.py  test_scoring.py  test_squad.py  test_user.py
